Hamburer menu on mobile device on click item hide, added social media icons, fix table text

--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@
     --text-font-family: 'Roboto';
     --text-font-size: 22px;
     --text-font-size-phone: 18px;
+    --table-text-phone-font-size: 14px;
+    --table-button-phone-font-size: 12px;
 }
 
 .btn-danger{
@@ -51,6 +53,15 @@ body{
     cursor: pointer!important;
     font-family: var(--menu-font-family);
     padding: 10px 20px;
+}
+.navbar .nav-item.nav-social a.nav-link{
+    padding: 5px;
+    display: inline-block;
+}
+
+.navbar .nav-item.nav-social img{
+    width: 40px;
+    height: 40px;
 }
 
 /* Hero  */
@@ -330,20 +341,20 @@ h2.accordion-header .accordion-button{
     }
     .table th, table td{
         padding: 10px 10px!important;
-        font-size: 18px;
+        font-size: var(--table-text-phone-font-size);
     }
     .table tr td svg.bi-check-lg, .table tr td svg.bi-x-lg {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
     }
     table tr:last-child td {
-        padding: 10px 5px!important;
+        padding: 10px 1px!important;
     }
     .table tr td a {
-        font-size: 14px;
+        font-size: var(--table-button-phone-font-size);
         font-weight: 500;
         border-radius: 40px;
-        padding: 10px 15px;
+        padding: 5px 10px;
     }
     .social {
         margin-top: 10px;
